Add a few dependencies we're going to need

--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -48,10 +48,13 @@ library
       base
     , foundation
 
+    , acid-state
     , aeson
     , cryptonite
     , bytestring
     , containers
+    , kademlia
+    , monad-logger
     , mtl
     , stm
     , time
