--- a/stack.yaml
+++ b/stack.yaml
@@ -3,7 +3,9 @@ resolver: lts-10.3
 packages:
 - .
 
-extra-deps: []
+extra-deps:
+- acid-state-0.14.3
+- kademlia-1.1.0.0
 
 ghc-options:
   "$locals": -fhide-source-paths
