--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -114,6 +114,32 @@ executable oscoin
   default-language:
       Haskell2010
 
+test-suite test
+  type:
+      exitcode-stdio-1.0
+
+  main-is:
+      Main.hs
+
+  hs-source-dirs:
+      test
+
+  other-modules:
+      Oscoin.Tests
+
+  default-language:
+      Haskell2010
+
+  build-depends:
+      base
+    , oscoin
+    , QuickCheck
+    , tasty
+    , tasty-hunit
+
+  ghc-options:
+    -threaded -rtsopts -with-rtsopts=-N
+
 source-repository head
   type: git
   location: https://monadic.phacility.com/source/oscoin
