--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -77,6 +77,9 @@ library
     , http-types
     , memory
     , merkle-tree
+    , microlens
+    , microlens-contra
+    , microlens-mtl
     , network
     , network-simple
     , ansi-terminal
