Implement basic transaction signing functions

--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -65,6 +65,7 @@ library
     , cryptonite
     , bytestring
     , containers
+    , data-default
     , data-has
     , kademlia
     , monad-logger
