Parametrize Api with tx type

--- a/stack.yaml
+++ b/stack.yaml
@@ -12,6 +12,7 @@ extra-deps:
 - tasty-1.0.0.1
 - merkle-tree-0.1.0
 - base58-bytestring-0.1.0
+- monad-stm-0.1.0.2
 
 ghc-options:
   "$locals": -fhide-source-paths
