--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -84,6 +84,7 @@ library
     , microlens
     , microlens-contra
     , microlens-mtl
+    , monad-stm
     , network
     , network-simple
     , ansi-terminal
