--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -166,6 +166,7 @@ test-suite test
   other-modules:
       Oscoin.Tests
     , Oscoin.HTTP.Test.Helpers
+    , Oscoin.Crypto.Hash.Arbitrary
 
   default-language:
       Haskell2010
@@ -173,9 +174,11 @@ test-suite test
   build-depends:
       base
     , aeson
+    , binary
     , http-types
     , oscoin
     , QuickCheck
+    , quickcheck-instances
     , tasty       >= 1.0.0.1
     , tasty-hunit >= 0.10.0.1
     , text
