--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -181,6 +181,7 @@ test-suite test
     , quickcheck-instances
     , tasty       >= 1.0.0.1
     , tasty-hunit >= 0.10.0.1
+    , tasty-quickcheck
     , text
     , microlens
     , microlens-aeson
