--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -22,6 +22,7 @@ library
     , Oscoin.Environment
     , Oscoin.Node
     , Oscoin.Node.State
+    , Oscoin.Node.State.Mempool
     , Oscoin.Node.Service
     , Oscoin.Node.Channel
     , Oscoin.Patch
@@ -56,7 +57,6 @@ library
     , Oscoin.P2P.Block
 
     , Oscoin.Transaction
-    , Oscoin.Transaction.Mempool
 
   other-modules:
       Data.ByteString.Base64.Extended
