--- a/stack.yaml
+++ b/stack.yaml
@@ -13,6 +13,7 @@ extra-deps:
 - merkle-tree-0.1.0
 - base58-bytestring-0.1.0
 - monad-stm-0.1.0.2
+- stm-2.4.5.0
 
 ghc-options:
   "$locals": -fhide-source-paths
