Small improvements here and there

--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -140,6 +140,7 @@ library
     , FlexibleContexts
     , MultiParamTypeClasses
     , GADTs
+    , InstanceSigs
 
     -- Records
     , RecordWildCards
