--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -60,6 +60,7 @@ library
 
   other-modules:
       Data.ByteString.Base64.Extended
+      Crypto.Data.Auth.Tree
 
   build-depends:
       base
@@ -193,6 +194,8 @@ test-suite test
     , Oscoin.Crypto.Blockchain.Arbitrary
     , Oscoin.Org.Arbitrary
     , Oscoin.Test.Helpers
+
+    , Crypto.Tests
 
   default-language:
       Haskell2010
