--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -244,6 +244,9 @@ test-suite test
     , ViewPatterns
     , TypeSynonymInstances
     , FlexibleInstances
+    , FlexibleContexts
+    , StandaloneDeriving
+    , InstanceSigs
 
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N
