--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -154,6 +154,9 @@ library
     -- Future compatibility
     , MonadFailDesugaring
 
+    -- Patterns
+    , PatternSynonyms
+
   ghc-options:
     -Wall
     -Wcompat
