Wrap PublicKey/PrivateKey in new types
This allows us to define Eq/Ord instances which make sense in our
context.

--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -65,7 +65,8 @@ library
     , Crypto.Data.Auth.Tree.Proof
 
   other-modules:
-      Data.ByteString.Base64.Extended
+      Crypto.PubKey.ECC.ECDSA.Extended
+    , Data.ByteString.Base64.Extended
 
   build-depends:
       base
