--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -198,6 +198,7 @@ test-suite test
 
   other-modules:
       Oscoin.Tests
+    , Oscoin.Consensus.Simple.Arbitrary
     , Oscoin.Consensus.Tests
     , Oscoin.Consensus.Test.Node
     , Oscoin.Consensus.Test.Network
