Oscoin Blocktree/Platform/Language Prototype V2. (#37)
Blocktree/Platform/Language Prototype V2.

    Add a new prototype of the (general) Oscoin operation/transaction
    language.
    The language relies on a fold function that determines the validity
    of operations/transactions; the state after a set of operations; and
    the messages for subscribers.

--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -31,6 +31,7 @@ library
     , Oscoin.User
 
     , Oscoin.Prototype.V1
+    , Oscoin.Prototype.V2
 
     , Oscoin.Crypto.Blockchain
     , Oscoin.Crypto.Blockchain.Block
@@ -96,6 +97,7 @@ library
     , filepath
     , http-types
     , http-api-data
+    , megaparsec
     , memory
     , merkle-tree
     , microlens
@@ -128,6 +130,7 @@ library
     , OverloadedStrings
     , BangPatterns
     , TypeOperators
+    , MultiWayIf
 
     -- Deriving
     , DeriveFunctor
@@ -209,6 +212,7 @@ test-suite test
     , Oscoin.Crypto.PubKey.Arbitrary
     , Oscoin.Crypto.Blockchain.Arbitrary
     , Oscoin.Account.Arbitrary
+    , Oscoin.Prototype.V2.Tests
     , Oscoin.Test.Helpers
 
     , Crypto.Tests
@@ -232,6 +236,7 @@ test-suite test
     , tasty-hunit >= 0.10.0.1
     , tasty-quickcheck
     , text
+    , megaparsec
     , microlens
     , microlens-aeson
     , bytestring
