--- a/oscoin.cabal
+++ b/oscoin.cabal
@@ -23,8 +23,8 @@ library
     , Oscoin.Consensus.Nakamoto
     , Oscoin.Environment
     , Oscoin.Node
-    , Oscoin.Node.State.Mempool
-    , Oscoin.Node.State.Tree
+    , Oscoin.Node.Mempool
+    , Oscoin.Node.Tree
     , Oscoin.Node.Service
     , Oscoin.Node.Channel
     , Oscoin.Patch
