--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -34,3 +34,4 @@
 - ignore: {name: Use let}
 - ignore: {name: Use newtype instead of data}
 - ignore: {name: Redundant $}
+- ignore: {name: Avoid reverse}
