--- a/package.yaml
+++ b/package.yaml
@@ -61,10 +61,23 @@ dependencies:
 
 executables:
   oscoin:
-    main: src/Main.hs
+    main: client/Main.hs
     dependencies:
     - base >=4.10 && <4.11
+    - iproute
+    - network-multicast
+    - optparse-generic >= 1.3.0
     - oscoin
+    - split
+  txgen:
+    main: txgen/Main.hs
+    dependencies:
+    - base >=4.10 && <4.11
+    - iproute
+    - network-multicast
+    - optparse-generic >= 1.3.0
+    - oscoin
+    - split
 
 tests:
   test:
