--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -24,6 +24,7 @@
 - warn: {lhs: return, rhs: pure}
 - warn: {lhs: liftM, rhs: map}
 - warn: {lhs: ap, rhs: (<*>)}
+- warn: {lhs: mapM, rhs: traverse}
 
 - ignore: {name: Use map, within: [Crypto.Data.Auth.Tree.Proof]}
 
