Define a simple discovery interface and a few impls
In addition to the UDP multicast one:

* pure (State)
* in memory (stm)
* kademlia (naive)

--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ dependencies:
   - network
   - network-multicast
   - network-simple
+  - safe-exceptions
   - semigroups
   - split
   - Spock
@@ -138,3 +139,4 @@ ghc-options:
 - -fno-warn-orphans
 - -fno-warn-unused-do-bind
 - -fno-print-expanded-synonyms
+- -funbox-small-strict-fields
