Add StrictData extension

--- a/package.yaml
+++ b/package.yaml
@@ -122,6 +122,7 @@ default-extensions:
 - RecordWildCards
 - ScopedTypeVariables
 - StandaloneDeriving
+- StrictData
 - TypeApplications
 - TypeFamilies
 - TypeOperators
