Monad Transformers to the rescue!
**Why all this?**

Honestly, I don't quite remember. It started out as the question of how
to modularise out networking, which lead to the realisation that
"consensus" (the `Protocol` class) would handle too many things at the
same time, which led to a major attempt to draw some interface
boundaries.

**What's all this?**

We ended up re-formulating consensus, storage (mainly: mempool and
blockstore), and networking as a monad transformer stack, using a
bunch of "mtl-style" effect classes to convey which layer owns resp. has
access to which concerns. The main classes are `MonadProtocol`,
`MonadMempool`, `MonadBlockStore`, and `MonadNetwork`. There are
also some classes around read/write access to the "World State"
(aka "state tree"), but that hasn't been fleshed out fully yet.

We have a concept of a `Node` monad, which provides mempool and
blockstore access (as well as state tree). The impure (IO)
implementation is `Oscoin.Node.NodeT`, for testing we have
`Oscoin.Consensus.Test.Node.TestNodeT` (which is just a `StateT`).
Consensus (namely `NakamotoT` and `SimpleT`) implement `MonadProtocol`
with constraints such that they can access the mempool and blockstore.

**Are we done yet?**

Hah, no! Some things off the top of my head:

* things could be named a bit better (eg. `addTxs` vs. perhaps `mempoolAddTxs`?)
* we don't know what a transaction is, and I understand that it will be
  radicle's job to interpret whatever bytes come in into whatever a
  transaction means. We do, however, currently let network parse the bytes
  into some transaction type, which requires to carry a phantom type for
  both `NetworkT` and `NodeT`. While this allows to pick the type when
  running the stack, which is handy for our "dummy" executables, it is
  also unsafe: you can run the same stack at a different type. I think a
  transaction should just be a bytestring, and whatever the interface to
  radicle will be would just carry an interpretation functio

--- a/package.yaml
+++ b/package.yaml
@@ -23,9 +23,10 @@ dependencies:
   - dlist
   - fast-logger
   - formatting
+  - hashable
   - http-api-data
   - http-types
-  - kademlia
+  - iproute
   - memory
   - merkle-tree
   - microlens
@@ -33,6 +34,7 @@ dependencies:
   - mtl
   - network
   - network-multicast
+  - random
   - safe-exceptions
   - semigroups
   - Spock
@@ -70,13 +72,14 @@ tests:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
+      - -fno-warn-orphans
+      - -O2
     dependencies:
       - microlens
       - microlens-aeson
       - oscoin
       - QuickCheck
       - quickcheck-instances
-      - random
       - tasty >=1.0.0.1
       - tasty-hunit >=0.10.0.1
       - tasty-quickcheck
@@ -119,7 +122,6 @@ ghc-options:
   - -Wincomplete-uni-patterns
   - -Wincomplete-record-updates
   - -Wredundant-constraints
-  - -fno-warn-orphans
   - -fno-warn-unused-do-bind
   - -fno-print-expanded-synonyms
   - -funbox-small-strict-fields
