--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -30,6 +30,7 @@
 - warn: {lhs: map (const ()), rhs: void}
 
 - ignore: {name: Use map, within: [Crypto.Data.Auth.Tree.Proof]}
+- ignore: {name: Collapse lambdas}
 
 - ignore: {name: Use concatMap}
 - ignore: {name: Use ++}
