--- a/stack.yaml
+++ b/stack.yaml
@@ -11,6 +11,7 @@ extra-deps:
 - Spock-0.13.0.0
 - Spock-core-0.13.0.0
 - reroute-0.5.0.0
+- '../radicle'
 
 - git: git@github.com:cloudhead/wai
   commit: a3464cc76198d51ae7cf838690eadeeefd627f9c
