--- a/stack.yaml
+++ b/stack.yaml
@@ -11,12 +11,14 @@ extra-deps:
 - Spock-0.13.0.0
 - Spock-core-0.13.0.0
 - reroute-0.5.0.0
-- '../radicle'
 
 - git: git@github.com:cloudhead/wai
   commit: a3464cc76198d51ae7cf838690eadeeefd627f9c
   subdirs:
     - wai-extra
+
+- git: http://git.oscoin.io/radicle
+  commit: f4c769750b4c6b9d2e839b80f243ba3eb375cc01
 
 ghc-options:
   "$locals": -fhide-source-paths
