Initial CLI implementation
* Removed lots of modules which will be redundant with the new Radicle
infrastructure.
* Start on cli/ executable and Oscoin.CLI.* subtree.
* Move node client to node/.

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -41,3 +41,5 @@
 - ignore: {name: Use newtype instead of data}
 - ignore: {name: Redundant $}
 - ignore: {name: Avoid reverse}
+- ignore: {name: Use print}
+- ignore: {name: Too strict maybe}
