--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
     build:
         docker:
-            - image: fpco/stack-build:lts-11.5
+          - image: haskell:8.4.3
         steps:
             - checkout
             - restore_cache:
