API: lookupTx in both BlockStore and Mempool

--- a/package.yaml
+++ b/package.yaml
@@ -117,6 +117,7 @@ default-extensions:
   - GADTs
   - GeneralizedNewtypeDeriving
   - InstanceSigs
+  - LambdaCase
   - MonadFailDesugaring
   - MultiParamTypeClasses
   - MultiWayIf
