--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
   - mtl
   - network
   - network-multicast
+  - optparse-applicative
   - primitive
   - prettyprinter
   - radicle
