package.yaml: Add TupleSections extension

--- a/package.yaml
+++ b/package.yaml
@@ -145,6 +145,7 @@ default-extensions:
   - TypeFamilies
   - TypeOperators
   - TypeSynonymInstances
+  - TupleSections
   - ViewPatterns
 
 ghc-options:
