--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,7 @@ dependencies:
   - data-has
   - directory
   - dlist
+  - Diff
   - fast-logger
   - filepath
   - focus
@@ -38,6 +39,7 @@ dependencies:
   - microlens
   - microlens-mtl
   - mtl
+  - nicify-lib
   - network
   - network-multicast
   - optparse-applicative
